@@ -1,4 +1,12 @@
 
+2018-09-10  Ron Norman <rjn@inglenet.com>
+
+	* tree.c: removed redundant warnings about xyz 'is always' TRUE/FALSE
+	* flag.def: new compile option: 'remove-unreachable' defaults to on
+	      So then -fno-remove-unreachable does not remove unreachable code
+	* typeck.c: Checks cb_flag_remove_unreachable
+	* cobc.c: If -g then clear cb_flag_remove_unreachable
+
 2018-09-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* typeck.c (validate_move): always check full length for VALUE
